fixed the broken css and tried applying the css to all inputs

--- a/form_input.css
+++ b/form_input.css
@@ -4,6 +4,6 @@
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     box-sizing: border-box;
   }
