--- a/logout.css
+++ b/logout.css
@@ -13,10 +13,7 @@ body {
   height: 100%;
   width: 100%;
   opacity: 0.5;
-  background-color: #white;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: white center no-repeat cover;
 
 }
 
@@ -33,7 +30,7 @@ button {
   border-radius: 20px;
   border: 2px solid #4CAF50;
   background-color: #4CAF50;
-  #137B13
+  
   font-size: 24px;
   padding: 14px 40px;
   background-color:#5BC85B
