--- a/register_style.css
+++ b/register_style.css
@@ -1,15 +1,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
+/*
 .form_info {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   box-sizing: border-box;
-}
+}*/
 
 button {
   background-color: #04AA6D;
